# gym-super-mario-bros

./: CI_CD_README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
gym_super_mario_bros/: __init__.py  _version.py  smb_env.py  smb_random_stages_env.py
gym_super_mario_bros/tests/: test_registration.py  test_smv_env.py
