[build-system]
requires = ["setuptools>=77.0.0", "wheel", "setuptools_scm[toml]>=6.2", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gym-super-mario-bros"
dynamic = ["version"]
description = "Super Mario Bros. for OpenAI Gym"
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Proprietary"
authors = [
    {name = "Christian Kauten", email = "kautencreations@gmail.com"}
]
keywords = [
    "OpenAI-Gym",
    "NES", 
    "Super-Mario-Bros",
    "Lost-Levels",
    "Reinforcement-Learning-Environment"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Side-Scrolling/Arcade Games",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "nes-py>=8.1.4,<9.0.0"
]

[project.urls]
Homepage = "https://github.com/Kautenja/gym-super-mario-bros"
Repository = "https://github.com/Kautenja/gym-super-mario-bros"

[project.scripts]
gym_super_mario_bros = "gym_super_mario_bros._app.cli:main"

[tool.setuptools]
packages = ["gym_super_mario_bros", "gym_super_mario_bros._app", "gym_super_mario_bros._roms"]
include-package-data = true

[tool.setuptools.package-data]
"gym_super_mario_bros" = ["_roms/*.nes"]

[tool.setuptools_scm]
write_to = "gym_super_mario_bros/_version.py"

[tool.cibuildwheel]
build = "cp311-* cp312-*"
skip = "*-win32 *-manylinux_i686"
test-command = "python -c \"import gym_super_mario_bros; print('Package imported successfully')\""
test-requires = ["pytest"]
before-build = "pip install setuptools>=77.0.0 packaging>=24.2"

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.pytest.ini_options]
testpaths = ["gym_super_mario_bros/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*", "*Test", "*Tests"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
